# cardea

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.toml.example  entrypoint.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/cardea/: __main__.py  app.py  secrets.py
src/cardea/client/: __init__.py  _base.py  browser.py  email.py  github.py
src/cardea/proxies/: _proxy_utils.py  browser.py  email.py  generic.py  github.py  gmail.py  telegram.py
tests/: conftest.py  test_browser.py  test_client_base.py  test_client_browser.py  test_client_email.py  test_client_github.py  test_disabled_endpoints.py  test_email.py  test_generic_proxy.py  test_github_proxy.py  test_gmail_proxy.py  test_proxy_utils.py  test_telegram_proxy.py
