[project]
name = "cardea"
version = "0.1.0"
description = "Proxy to allow AI agents to safely access services, without the need for credentials"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Francesco Cavrini"}]
requires-python = ">=3.12"
keywords = ["proxy", "credentials", "ai-agents", "security", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.135.3,<0.136.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.41.0,<0.43.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
client = ["httpx>=0.28.1,<0.29.0"]

[project.urls]
Homepage = "https://github.com/fcvr1010/cardea"
Repository = "https://github.com/fcvr1010/cardea"
Issues = "https://github.com/fcvr1010/cardea/issues"

[project.scripts]
cardea = "cardea.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cardea"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22",
    "ruff>=0.11",
]

[tool.mypy]
strict = true
install_types = true
non_interactive = true

[tool.coverage.run]
omit = ["src/cardea/__main__.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
